--- a/LoLChampions/Thresh.ipynb
+++ b/LoLChampions/Thresh.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Champion Analysis: Thresh"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -25,14 +32,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "200"
       ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "execution_count": 3
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -52,51 +59,45 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Health_Thresh 561\nHealthRegen_Thresh 7\nResourceBar_Thresh 274\nResourceRegen_Thresh 6\nArmor_Thresh 28\nAttackDamage_Thresh 56\nMagicResist_Thresh 30\nMovementSpeed_Thresh 335\nAttackRange_Thresh 450\n"
+      "Health_Thresh --> 561.0\n",
+      "HealthRegen_Thresh --> 7.0\n",
+      "ResourceBar_Thresh --> 274.0\n",
+      "ResourceRegen_Thresh --> 6.0\n",
+      "Armor_Thresh --> 28.0\n",
+      "AttackDamage_Thresh --> 56.0\n",
+      "MagicResist_Thresh --> 30.0\n",
+      "MovementSpeed_Thresh --> 335.0\n",
+      "AttackRange_Thresh --> 450.0\n",
+      "Health_Thresh_lvl --> 93.0\n",
+      "HealthRegen_Thresh_lvl --> 0.55\n",
+      "ResourceBar_Thresh_lvl --> 44.0\n",
+      "ResourceRegen_Thresh_lvl --> 0.8\n",
+      "Armor_Thresh_lvl --> 0.0\n",
+      "AttackDamage_Thresh_lvl --> 2.2\n",
+      "MagicResist_Thresh_lvl --> 0.5\n"
      ]
     }
    ],
    "source": [
+    "#Base Stats\n",
+    "\n",
     "for key, value in CHAMPION.base_stats.items():\n",
-    "    if html.find('span', id=value) is not None:\n",
-    "        print(value, html.find('span', id=value).string)\n",
-    "    else:\n",
-    "        print(value)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Health_Thresh_lvl 93.0\n",
-      "HealthRegen_Thresh_lvl 0.55\n",
-      "ResourceBar_Thresh_lvl 44.0\n",
-      "ResourceRegen_Thresh_lvl 0.8\n",
-      "Armor_Thresh_lvl 0.0\n",
-      "AttackDamage_Thresh_lvl 2.2\n",
-      "MagicResist_Thresh_lvl 0.5\n",
-      "MovementSpeed_Thresh_lvl\n",
-      "AttackRange_Thresh_lvl\n"
-     ]
-    }
-   ],
-   "source": [
+    "    if html.find('span', id=key) is not None:\n",
+    "        CHAMPION.base_stats[key] = float(html.find('span', id=key).string)\n",
+    "        print(f'{key} --> {CHAMPION.base_stats[key]}')\n",
+    "\n",
     "for key, value in CHAMPION.base_stats_lvl.items():\n",
-    "    if html.find('span', id=value) is not None:\n",
-    "        print(value, float(html.find('span', id=value).string))\n",
-    "    else:\n",
-    "        print(value)"
+    "    if html.find('span', id=key) is not None:\n",
+    "        CHAMPION.base_stats[key] = float(html.find('span', id=key).string)\n",
+    "        print(f'{key} --> {CHAMPION.base_stats[key]}')"
    ]
   },
   {
@@ -109,8 +110,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python381jvsc74a57bd097ae724bfa85b9b34df7982b8bb8c7216f435b92902d749e4263f71162bea840",
-   "display_name": "Python 3.8.1 64-bit ('base': conda)"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
