Added ChampionAbility to Thresh notebook.

--- a/LoLChampions/Thresh.ipynb
+++ b/LoLChampions/Thresh.ipynb
@@ -14,7 +14,10 @@
    "outputs": [],
    "source": [
     "from bs4 import BeautifulSoup as bs\n",
-    "from Champions import ChampionWikia"
+    "from Champions import (\n",
+    "    ChampionWikia,\n",
+    "    ChampionAbility as Ability\n",
+    ")"
    ]
   },
   {
@@ -115,56 +118,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "skill_q = html.find('div', {'class': 'skill_q'}).table"
+    "skill_q = Ability(ability_name='Death Sentence')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "70"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Skill Q Mana Cost\n",
-    "skill_q_table1_text = list(skill_q.stripped_strings)\n",
-    "for index, text in enumerate(skill_q_table1_text):\n",
-    "    if text == 'COST:':\n",
-    "        skill_q_mana_cost = skill_q_table1_text[index + 1]\n",
-    "        break\n",
-    "\n",
-    "skill_q_mana_cost = int(skill_q_mana_cost.split()[0])\n",
-    "skill_q_mana_cost"
+    "table1 = html.find('div', {'class': 'skill_q'}).table"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'25.55%'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# % Mana Cost Based on Level 1 Mana\n",
-    "f\"{skill_q_mana_cost / CHAMPION.base_stats['ResourceBar_Thresh']:.2%}\""
+    "# Skill Q Mana Cost\n",
+    "skill_q_table1_text = list(table1.stripped_strings)\n",
+    "for index, text in enumerate(skill_q_table1_text):\n",
+    "    if text == 'COST:':\n",
+    "        skill_q_mana_cost = skill_q_table1_text[index + 1]\n",
+    "        break\n",
+    "\n",
+    "skill_q.ability_cost = int(skill_q_mana_cost.split()[0])"
    ]
   },
   {
@@ -175,7 +154,7 @@
     {
      "data": {
       "text/plain": [
-       "'11.7 seconds'"
+       "'25.55%'"
       ]
      },
      "execution_count": 9,
@@ -184,8 +163,29 @@
     }
    ],
    "source": [
+    "# % Mana Cost Based on Level 1 Mana\n",
+    "f\"{skill_q.ability_cost / CHAMPION.base_stats['ResourceBar_Thresh']:.2%}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'11.7 seconds'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# Time required to recover Mana Cost via MP5\n",
-    "f\"{skill_q_mana_cost / CHAMPION.base_stats['ResourceRegen_Thresh']:.3} seconds\""
+    "f\"{skill_q.ability_cost / CHAMPION.base_stats['ResourceRegen_Thresh']:.3} seconds\""
    ]
   },
   {
