Completed Skill Q attributes for Thresh.

--- a/LoLChampions/Thresh.ipynb
+++ b/LoLChampions/Thresh.ipynb
@@ -13,6 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from unicodedata import normalize\n",
     "from bs4 import BeautifulSoup as bs\n",
     "from Champions import (\n",
     "    ChampionWikia,\n",
@@ -127,23 +128,74 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "table1 = html.find('div', {'class': 'skill_q'}).table"
+    "skill_q_table1 = html.find('div', {'class': 'skill_q'}).table\n",
+    "skill_q_table2 = skill_q_table1.next_sibling"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " skill_q.base_damage = [80, 120, 160, 200, 240]\n",
+      " skill_q.base_damage_type = 'Magic Damage'\n",
+      " skill_q.scale_damage = 50\n",
+      " skill_q.scale_damage_attr = 'AP)'\n",
+      " skill_q.ability_cost = 70\n",
+      " skill_q.ability_cooldown = [20, 18, 16, 14, 12]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ChampionAbility(ability_name='Death Sentence', base_damage=[80, 120, 160, 200, 240], base_damage_type='Magic Damage')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# Skill Q Base Damage\n",
+    "skill_q_damage = skill_q_table2.find('dd').get_text().split('(')\n",
+    "skill_q.base_damage = list(map(int, skill_q_damage[0].split('/')))\n",
+    "print(f'{ skill_q.base_damage = }')\n",
+    "\n",
+    "# Skill Q Base Damage Type\n",
+    "skill_q.base_damage_type = skill_q_table2.find('dt').get_text().strip(':')\n",
+    "print(f'{ skill_q.base_damage_type = }')\n",
+    "\n",
+    "# Skill Q Scale Damage\n",
+    "skill_q.scale_damage = int(\"\".join(\n",
+    "    filter(str.isdigit, normalize('NFKD', skill_q_damage[1]))\n",
+    "))\n",
+    "print(f'{ skill_q.scale_damage = }')\n",
+    "\n",
+    "# Skill Q Scale Damage Attribute\n",
+    "skill_q.scale_damage_attr = skill_q_damage[1].replace(str(skill_q.scale_damage), '').split(' ')[1]\n",
+    "print(f'{ skill_q.scale_damage_attr = }')\n",
+    "\n",
     "# Skill Q Mana Cost\n",
-    "skill_q_table1_text = list(table1.stripped_strings)\n",
+    "skill_q_table1_text = list(skill_q_table1.stripped_strings)\n",
     "for index, text in enumerate(skill_q_table1_text):\n",
     "    if text == 'COST:':\n",
     "        skill_q_mana_cost = skill_q_table1_text[index + 1]\n",
-    "        break\n",
+    "    if text == 'COOLDOWN:':\n",
+    "        skill_q_cooldown = skill_q_table1_text[index + 1]\n",
     "\n",
-    "skill_q.ability_cost = int(skill_q_mana_cost.split()[0])"
+    "skill_q.ability_cost = int(skill_q_mana_cost.split()[0])\n",
+    "print(f'{ skill_q.ability_cost = }')\n",
+    "\n",
+    "# Skill Q Cooldown\n",
+    "skill_q.ability_cooldown = list(map(int, skill_q_cooldown.split('/')))\n",
+    "print(f'{ skill_q.ability_cooldown = }')\n",
+    "\n",
+    "skill_q"
    ]
   },
   {
