Analysis for Level 18 stats for Thresh.

--- a/LoLChampions/Thresh.ipynb
+++ b/LoLChampions/Thresh.ipynb
@@ -236,9 +236,65 @@
     }
    ],
    "source": [
-    "# Time required to recover Mana Cost via MP5\n",
+    "# Time required to recover Mana Cost via MP5 at Level 1\n",
     "f\"{skill_q.ability_cost / CHAMPION.base_stats['ResourceRegen_Thresh']:.3} seconds\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'6.85%'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# % Mana Cost Based on Level 18 Mana\n",
+    "f\"{skill_q.ability_cost /(CHAMPION.base_stats['ResourceBar_Thresh'] + 17 * CHAMPION.base_stats['ResourceBar_Thresh_lvl']):.2%}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3.57 seconds'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Time required to recover Mana Cost via MP5 at Level 18\n",
+    "f\"{skill_q.ability_cost / (CHAMPION.base_stats['ResourceRegen_Thresh'] + 17 * CHAMPION.base_stats['ResourceRegen_Thresh_lvl']):.3} seconds\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
