Added new method stat_resource_cost_percentage

--- a/LoLChampions/Thresh.ipynb
+++ b/LoLChampions/Thresh.ipynb
@@ -284,17 +284,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.25547445255474455"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CHAMPION.stat_resource_cost_percentage(skill_q)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0684931506849315"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CHAMPION.stat_resource_cost_percentage(skill_q, level=18)"
+   ]
   },
   {
    "cell_type": "code",
